JVM，Dump和GC设置查看，下载Jprofile配合VM option命令查看堆内存使用情况和定位问题出现的代码行数